package in.ashwanik.pdp.prototype;

class SpikeHammer extends Weapon {

    SpikeHammer(String name,
                String description,
                int weight,
                int minimumDamage,
                int maximumDamage) {
        super(name, description, weight, minimumDamage, maximumDamage);
    }
}
